--- a/index.html
+++ b/index.html
@@ -13,51 +13,55 @@
     <div class="row">
       <div class="column">
         <div class="card">
-          <img src="images/michael.png" alt="Michael" style="width: 100%" />
+          <img src="images/michael.png" alt="Michael" style="width: 30px" />
           <div class="container">
             <h2>Michael</h2>
-            <p><button class="button">Contact</button></p>
+            <p><button class="button" id="michaelBtn">About Me</button></p>
           </div>
         </div>
       </div>
       <div class="column">
         <div class="card">
-          <img src="images/crystal.png" alt="Crystal" style="width: 100%" />
+          <img src="images/crystal.png" alt="Crystal" style="width: 30px" />
           <div class="container">
             <h2>Crystal</h2>
-            <p><button class="button">Contact</button></p>
+            <p><button class="button" id="crystallBtn">About Me</button></p>
           </div>
         </div>
       </div>
       <div class="column">
         <div class="card">
-          <img src="images/tanika.png" alt="Tanika" style="width: 100%" />
+          <img src="images/tanika.png" alt="Tanika" style="width: 30px" />
           <div class="container">
             <h2>Tanika</h2>
+            <p><button class="button" id="tanikaBtn">About Me</button></p>
           </div>
         </div>
       </div>
       <div class="column">
         <div class="card">
-          <img src="images/shavone.png" alt="Shavone" style="width: 100%" />
+          <img src="images/shavone.png" alt="Shavone" style="width: 30px" />
           <div class="container">
             <h2>Shavone</h2>
+            <p><button class="button" id="shavoneBtn">About Me</button></p>
           </div>
         </div>
       </div>
       <div class="column">
         <div class="card">
-          <img src="images/garth.png" alt="Garth" style="width: 100%" />
+          <img src="images/garth.png" alt="Garth" style="width: 30px" />
           <div class="container">
             <h2>Garth</h2>
+            <p><button class="button" id="garthBtn">About Me</button></p>
           </div>
         </div>
       </div>
       <div class="column">
         <div class="card">
-          <img src="images/dandre.png" alt="D'Andre" style="width: 100%" />
+          <img src="images/dandre.png" alt="D'Andre" style="width: 30px" />
           <div class="container">
             <h2>D'Andre</h2>
+            <p><button class="button" id="dandreBtn">About Me</button></p>
           </div>
         </div>
       </div>
